<resources>
    <string name="app_name">lj_costomapp</string>
    <string name="options">操作</string>
    <string name="scan_barcode_title">条形码扫描</string>
    <string name="scan_qrcode_title">二维码扫描</string>
    <string name="scan_allcode_title">二维码或条形码扫描</string>
    <string name="scan_barcode_hint">将条形码对入取景框，即可自动扫描</string>
    <string name="scan_qrcode_hint">将二维码对入取景框，即可自动扫描</string>
    <string name="scan_allcode_hint">将二维码或条形码对入取景框，即可自动扫描</string>
    <string name="title_activity_sao_mao">SaoMaoActivity</string>
    <string name="action_settings">Settings</string>


    <string name="buhuo_user">补货人员</string>
    <string name="kefu_user">客服人员</string>
    <string name="tongji_user">统计人员</string>
    <string name="manger_user">管理人员</string>
    <string name="saoma_location">扫码定位</string>
    <string name="buhuo_message">补货通知</string>
    <string name="buhuo_done">补货完成</string>
    <string name="exit_login">退出登录</string>
    <string name="btn_back">返回</string>
    <string name="callTa">  联系TA  </string>
    <string name="alarm">  — 报警 —  </string>
    <string name="alarmnot">未解决</string>
    <string name="alarmyet">已解决</string>

    <string name="tongji">统计</string>
    <string name="machiceti">自动售货机统计</string>
    <string name="user">User</string>
    <string name="usertj">用户统计</string>
    <string name="liushui">流水</string>
    <string name="todayls">今日流水</string>
    <string name="dingdan">订单</string>
    <string name="managedd">订单管理</string>
    <string name="jiesuan">结算</string>
    <string name="jsserach">结算查询</string>
    <string name="tuikuan">退款</string>
    <string name="tkserach">退款查询</string>
    <string name="xintiao">心跳</string>
    <string name="xintiao_tj">心跳统计</string>
    <string name="statistics">数据</string>
    <string name="statistics_tj">数据统计</string>
    <string name="vip">VIP</string>
    <string name="vip_tj">储值卡与会员</string>

    <string name="startserach">开始查询</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">机器注册统计</string>
    <string name="title_activity_test2">Test2Activity</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="no_network_connection">无网络连接</string>


</resources>
