<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    android:orientation="vertical"
    tools:context="com.defence.costomapp.activity.statistics.StatisticsActivity">

    <include layout="@layout/include_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/liear_machicetj"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="@dimen/pad_height_120"
                android:layout_height="@dimen/pad_height_120"
                android:background="@drawable/tongjibg"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tongji"
                    android:textColor="@color/sansansan"
                    android:textSize="@dimen/pad_text_size_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/machiceti"
                    android:textColor="@color/liuliuliu"
                    android:textSize="@dimen/pad_text_size_14" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/liear_usertj"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="@dimen/pad_height_120"
                android:layout_height="@dimen/pad_height_120"
                android:background="@drawable/tongjibg"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/user"
                    android:textColor="@color/sansansan"
                    android:textSize="@dimen/pad_text_size_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/usertj"
                    android:textColor="@color/liuliuliu"
                    android:textSize="@dimen/pad_text_size_14" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/pad_height_30"
        android:background="@color/jiujiujiu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/liear_liushui"
                android:layout_width="@dimen/pad_height_100"
                android:layout_height="@dimen/pad_height_100"
                android:layout_weight="1"
                android:background="@drawable/tongjibg"
                android:layout_margin="@dimen/pad_height_8"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/liushui"
                    android:textColor="@color/sansansan"
                    android:textSize="@dimen/pad_text_size_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/todayls"
                    android:textColor="@color/liuliuliu"
                    android:textSize="@dimen/pad_text_size_14" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/liear_dingdan"
                android:layout_width="@dimen/pad_height_100"
                android:layout_height="@dimen/pad_height_100"
                android:layout_weight="1"
                android:background="@drawable/tongjibg"
                android:layout_margin="@dimen/pad_height_8"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/dingdan"
                    android:textColor="@color/sansansan"
                    android:textSize="@dimen/pad_text_size_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/managedd"
                    android:textColor="@color/liuliuliu"
                    android:textSize="@dimen/pad_text_size_14" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/liear_jiesuan"
                android:layout_width="@dimen/pad_height_100"
                android:layout_height="@dimen/pad_height_100"
                android:layout_weight="1"
                android:background="@drawable/tongjibg"
                android:layout_margin="@dimen/pad_height_8"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/jiesuan"
                    android:textColor="@color/sansansan"
                    android:textSize="@dimen/pad_text_size_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/jsserach"
                    android:textColor="@color/liuliuliu"
                    android:textSize="@dimen/pad_text_size_14" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/liear_tuikuan"
                android:layout_width="@dimen/pad_height_100"
                android:layout_height="@dimen/pad_height_100"
                android:layout_weight="1"
                android:background="@drawable/tongjibg"
                android:layout_margin="@dimen/pad_height_8"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tuikuan"
                    android:textColor="@color/sansansan"
                    android:textSize="@dimen/pad_text_size_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tkserach"
                    android:textColor="@color/liuliuliu"
                    android:textSize="@dimen/pad_text_size_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/liear_xintiao"
                android:layout_width="@dimen/pad_height_100"
                android:layout_height="@dimen/pad_height_100"
                android:layout_weight="1"
                android:background="@drawable/tongjibg"
                android:layout_margin="@dimen/pad_height_8"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/xintiao"
                    android:textColor="@color/sansansan"
                    android:textSize="@dimen/pad_text_size_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/xintiao_tj"
                    android:textColor="@color/liuliuliu"
                    android:textSize="@dimen/pad_text_size_14" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/liear_vip"
                android:layout_width="@dimen/pad_height_100"
                android:layout_height="@dimen/pad_height_100"
                android:layout_weight="1"
                android:background="@drawable/tongjibg"
                android:layout_margin="@dimen/pad_height_8"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/vip"
                    android:textColor="@color/sansansan"
                    android:textSize="@dimen/pad_text_size_20" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/vip_tj"
                    android:textColor="@color/liuliuliu"
                    android:textSize="@dimen/pad_text_size_14" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


                <LinearLayout
                    android:id="@+id/liear_statistics"
                    android:layout_width="@dimen/pad_height_100"
                    android:layout_height="@dimen/pad_height_100"
                    android:background="@drawable/tongjibg"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/pad_height_8"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/statistics"
                        android:textColor="@color/sansansan"
                        android:textSize="@dimen/pad_text_size_20" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/statistics_tj"
                        android:textColor="@color/liuliuliu"
                        android:textSize="@dimen/pad_text_size_14" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="@dimen/pad_height_100"
                android:layout_height="@dimen/pad_height_100"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="@dimen/pad_height_8"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/sansansan"
                    android:textSize="@dimen/pad_text_size_20" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/liuliuliu"
                    android:textSize="@dimen/pad_text_size_14" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="@dimen/pad_height_100"
                android:layout_height="@dimen/pad_height_100"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_margin="@dimen/pad_height_8"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/sansansan"
                    android:textSize="@dimen/pad_text_size_20" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/liuliuliu"
                    android:textSize="@dimen/pad_text_size_14" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
