<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4f4f4"
    tools:context="com.defence.costomapp.activity.ChoiceTypeActivity">


    <LinearLayout
        android:id="@+id/liear_saoma"
        android:layout_width="@dimen/pad_height_80"
        android:layout_height="@dimen/pad_height_80"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_margin="@dimen/pad_height_10"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/pad_height_50"
            android:layout_height="@dimen/pad_height_50"
            android:src="@mipmap/saoma" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/saoma_location"
            android:textColor="@android:color/black"
            android:textSize="@dimen/pad_text_size_14" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="@dimen/pad_height_200"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/buhuoll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/pad_height_100"
                android:layout_height="@dimen/pad_height_100"
                android:background="@mipmap/buhuoicon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/buhuo_user"
                android:textColor="@android:color/black"
                android:textSize="@dimen/pad_text_size_14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/kefull"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/pad_height_100"
                android:layout_height="@dimen/pad_height_100"
                android:background="@mipmap/kefu" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/kefu_user"
                android:textColor="@android:color/black"
                android:textSize="@dimen/pad_text_size_14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tongji"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/pad_height_100"
                android:layout_height="@dimen/pad_height_100"
                android:background="@mipmap/tongji" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/tongji_user"
                android:textColor="@android:color/black"
                android:textSize="@dimen/pad_text_size_14" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/guanlill"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/pad_height_100"
                android:layout_height="@dimen/pad_height_100"
                android:background="@mipmap/guanli" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/manger_user"
                android:textColor="@android:color/black"
                android:textSize="@dimen/pad_text_size_14" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
